src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequest__c/EmrServerInboundRequest__c.object-meta.xml
<CustomObject>
    <label>EMR Server Inbound Request</label>
    <nameField>
        <displayFormat>EIR-{0000}</displayFormat>
        <label>EMR Server Inbound Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMR Server Inbound Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>