src/global/core-modules/emr-server-mgmt/objects/EmrServerInboundRequest__c/fields/StatusMessage__c.field-meta.xml
<CustomField>
    <fullName>StatusMessage__c</fullName>
    <label>Status Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>